unpackaged/main/default/objects/BL_Translation__c/BL_Translation__c.object-meta.xml
<CustomObject>
    <description>Translation Element for each Language</description>
    <label>Translation</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BL Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>