unpackaged/main/default/objects/BL_Translation__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>the language to be translated the source text</description>
    <label>Language</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>pt_BR</fullName>
                <label>Brazilian Portuguese</label>
            </value>
            <value>
                <fullName>pt new</fullName>
                <label>Brazilian Portuguese new</label>
            </value>
            <value>
                <fullName>zh_CN</fullName>
                <label>Chinese (Simplified)</label>
            </value>
            <value>
                <fullName>zh_TW</fullName>
                <label>Chinese (Traditional)</label>
            </value>
            <value>
                <fullName>cs</fullName>
                <label>Czech</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>en_SG</fullName>
                <label>English (Singapore)</label>
            </value>
            <value>
                <fullName>en_GB</fullName>
                <label>English (United Kingdom)</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>English US</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>he</fullName>
                <label>Hebrew</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>ja</fullName>
                <label>Japanese</label>
            </value>
            <value>
                <fullName>ko</fullName>
                <label>Korean</label>
            </value>
            <value>
                <fullName>ru</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>sv</fullName>
                <label>Swedish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>