unpackaged/main/default/objects/BL_Translation__c/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <formula>Text( Language__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language Code</label>
    <type>Text</type>
</CustomField>