unpackaged/main/default/objects/BL_Translation__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DDC</fullName>
                <label>Digital Card</label>
            </value>
            <value>
                <fullName>CLT</fullName>
                <label>Clienteling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>