unpackaged/main/default/objects/BL_Translation__c/listViews/DDC.listView-meta.xml
<ListView>
    <fullName>DDC</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Language_Code__c</columns>
    <columns>Target__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target__c</field>
        <operation>equals</operation>
        <value>DDC</value>
    </filters>
    <label>DDC</label>
</ListView>